--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Nuestro Server de Minecraft. Todos los derechos reservados Epdhpdetyfmwpe.mfpdyae.xp:40801.</p>
+        <p>&copy; 2024 Nuestro Server de Minecraft. Todos los derechos reservados Rdqudq_ozot___1.zsdqmñr.ld:40801.</p>
     </footer>
 
     <script src="script.js"></script>
